<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".GameActivity">

    <TextView
        android:id="@+id/questionNumberView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/question_1_3"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="154dp"
        tools:layout_editor_absoluteY="66dp" />

    <TextView
        android:id="@+id/scoreView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/score_10_30"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/durationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/duration_100"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/questionImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:scaleType="centerInside"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/todo" />

    <EditText
        android:id="@+id/answerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/enter_your_answer"
        android:inputType="numberSigned"
        android:minHeight="48dp"
        android:textStyle="bold"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/answerButton"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:text="@string/answer"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <Button
        android:id="@+id/play_againButton"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:text="@string/play_again"
        android:visibility="invisible"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

</androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>